--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,7 +9,7 @@
 #
 
 AM_CFLAGS	 = -DPLUGIN_DIR=\"@PLUGIN_DIR@\" -DTS_CONF=\"@TS_CONF@\" -DTS_POINTERCAL=\"@TS_POINTERCAL@\" \
-		   $(DEBUGFLAGS) $(LIBFLAGS) $(VIS_CFLAGS)
+		   $(DEBUGFLAGS) $(LIBFLAGS) $(VIS_CFLAGS) $(LIBEVDEV_CFLAGS)
 
 noinst_HEADERS   = tslib-private.h tslib-filter.h
 include_HEADERS  = tslib.h
