--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -53,8 +53,8 @@ set(ts_harvest_SOURCES ts_harvest.c testutils.c font_8x8.c font_8x16.c ${fbutils
 
 ## ADD TESTS
 ########################
-if (WIN32 AND ${with-sdl})
-	set(WIN32_WITH_SDL TRUE)
+if (MINGW AND ${with-sdl})
+	set(MINGW_WITH_SDL TRUE)
 endif()
 
 if (UNIX AND NOT ${with-sdl})
@@ -65,13 +65,13 @@ if(CMAKE_SYSTEM_NAME STREQUAL Linux)
 	set(LINUX TRUE)
 endif()
 
-TSLIB_ADD_TEST_ON_PLATFORMS(ts_print     UNIX WIN32)
-TSLIB_ADD_TEST_ON_PLATFORMS(ts_print_raw UNIX WIN32)
-TSLIB_ADD_TEST_ON_PLATFORMS(ts_print_mt  UNIX WIN32)
+TSLIB_ADD_TEST_ON_PLATFORMS(ts_print     UNIX MINGW)
+TSLIB_ADD_TEST_ON_PLATFORMS(ts_print_raw UNIX MINGW)
+TSLIB_ADD_TEST_ON_PLATFORMS(ts_print_mt  UNIX MINGW)
 TSLIB_ADD_TEST_ON_PLATFORMS(ts_harvest   UNIX)
 TSLIB_ADD_TEST_ON_PLATFORMS(ts_finddev   UNIX)
-TSLIB_ADD_TEST_ON_PLATFORMS(ts_test_mt   UNIX ${WIN32_WITH_SDL})
-TSLIB_ADD_TEST_ON_PLATFORMS(ts_calibrate UNIX ${WIN32_WITH_SDL})
+TSLIB_ADD_TEST_ON_PLATFORMS(ts_test_mt   UNIX ${MINGW_WITH_SDL})
+TSLIB_ADD_TEST_ON_PLATFORMS(ts_calibrate UNIX ${MINGW_WITH_SDL})
 TSLIB_ADD_TEST_ON_PLATFORMS(ts_test   	 ${UNIX_WITHOUT_SDL})
 TSLIB_ADD_TEST_ON_PLATFORMS(ts_verify    ${LINUX})
 
